--- a/.github/workflows/devsec.yaml
+++ b/.github/workflows/devsec.yaml
@@ -42,12 +42,12 @@ jobs:
         requirements: requirements-dev.txt
 
     - name: Build Docker image
-      run: docker build -t my-app .
+      run: docker build -t tic-tac-toe-game .
 
     - name: Scan Docker image for vulnerabilities
       uses: aquasecurity/trivy-action@master
       with:
-        image-ref: my-app
+        image-ref: tic-tac-toe
 
     
     
