--- a/.github/workflows/devsec.yaml
+++ b/.github/workflows/devsec.yaml
@@ -15,6 +15,11 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v4
 
+    - name: install python dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r requirements-dev.txt
+
     - name: Set up Python (if needed)
       uses: actions/setup-python@v5
       with:
@@ -24,7 +29,14 @@ jobs:
       run: pip install bandit
 
     - name: Run Bandit Scan
-      run: bandit -ll -ii -r .    
+      run: bandit -ll -ii -r .  
+
+    - name: Upload Bandit Scan Artifact
+      uses: actions/upload-artifact@v4
+      if: always()
+      with:
+        name: bandit-findings
+        path: bandit-report.json  
 
 
 
