--- a/.github/workflows/bandit.yml
+++ b/.github/workflows/bandit.yml
@@ -31,6 +31,15 @@ jobs:
 
    - name: run bandit
      run: bandit -r .
+
+   - name: Set up Docker Buildx
+     uses: docker/setup-buildx-action@v1
+
+   - name: Log in to Docker Hub
+     uses: docker/login-action@v1
+     with:
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}  
      
 
     
