--- a/.github/workflows/bandit.yml
+++ b/.github/workflows/bandit.yml
@@ -40,6 +40,10 @@ jobs:
      with:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}  
+
+   - name: Running dockercompose   
+     run: |
+       docker-compose up --build -d
      
 
     
