--- a/.github/workflows/bandit.yml
+++ b/.github/workflows/bandit.yml
@@ -34,16 +34,28 @@ jobs:
 
    - name: Set up Docker Buildx
      uses: docker/setup-buildx-action@v1
+  
 
-   - name: Log in to Docker Hub
-     uses: docker/login-action@v1
-     with:
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWORD }}  
-
+   - name: bulid docker-compose
+     run: |
+       sudo apt update
+       sudo apt install -y docker-compose
+       
    - name: Running dockercompose   
      run: |
        docker-compose up --build -d
+
+   - name: Run Docker Scout
+     run: |
+       docker scout ad your-image-name:tag    
+
+   - name: notify on vurnabilities
+     run: |
+        if [ $? -ne 0 ]; then
+            echo "Docker Scout found vulnerabilities. Check the logs above."
+            exit 1
+        fi
+       
      
 
     
