--- a/.github/workflows/bandit.yml
+++ b/.github/workflows/bandit.yml
@@ -45,6 +45,11 @@ jobs:
      run: |
        docker-compose up --build -d
 
+   - name: downlaod dockerscout
+     run: |
+       curl -sSfL https://raw.githubusercontent.com/docker/scout-cli/main/install.sh | sh -s --
+       sudo mv docker-scout /usr/local/bin/
+       
    - name: Run Docker Scout
      run: |
        docker scout ad tic-tac-toe-game:latest    
