--- a/.github/workflows/bandit.yml
+++ b/.github/workflows/bandit.yml
@@ -35,6 +35,8 @@ jobs:
    - name: Set up Docker Buildx
      uses: docker/setup-buildx-action@v1
   
+   - name: log into dockerhub
+     run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
 
    - name: bulid docker-compose
      run: |
