--- a/.github/workflows/bandit.yml
+++ b/.github/workflows/bandit.yml
@@ -54,7 +54,7 @@ jobs:
        
    - name: Run Docker Scout
      run: |
-       docker scout cves --exit-code=1 image://tic-tac-toe    
+       docker scout cves --exit-code=1 local://tic-tac-toe    
 
    - name: notify on vurnabilities
      run: |
