--- a/.github/workflows/bandit.yml
+++ b/.github/workflows/bandit.yml
@@ -50,7 +50,7 @@ jobs:
       uses: aquasecurity/trivy-action@0.28.0
       with:
         scan-type: fs
-        scan-ref: .
+        scan-ref: requirements-dev.txt
         format: table
         ignore-unfixed: true
 
